--- a/index.html
+++ b/index.html
@@ -4,20 +4,20 @@
 <html lang="en">
 <head>
 <meta charSet="utf-8"/>
-<title>Spotify Downloader - Spotify to MP3 Converter</title>
+<title>YouTube Downloader - YouTube to MP3 Converter</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<meta name="description" content="Spotify Downloader that let's you download songs, albums, and playlists from spotify in MP3">
+<meta name="description" content="YouTube Downloader that let's you download songs, albums, and playlists from youtube in MP3">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css">
-<link rel="canonical" href="https://KoshikKumar17.github.io/spotifydl">
+<link rel="canonical" href="https://KoshikKumar17.github.io/ytdl">
 <script>
-	var media = 'spotify';
-	var music_site = 'open.spotify.com';
+	var media = 'youtube';
+	var music_site = 'youtube.com';
 </script>
 <style>
 	:root {
 	  --main-bt-color: white;	
-	  --main-bg1-color: black;
-	  --main-bg2-color: grey;
+	  --main-bg1-color: red;
+	  --main-bg2-color: orange;
 	}
 </style>
 <link rel="stylesheet" type="text/css" href="style.css"/>
@@ -26,9 +26,9 @@
 <body>
 <nav style="color:black;size:20px;"><a href="https://KoshikKumar17.github.io"><b>Koshik Kumar</b></a></nav>
 <div id="main">
-	<h2>Download and Convert Spotify Muisc to MP3</h2>
+	<h2>Download and Convert YouTube Muisc to MP3</h2>
 	<div id="search-box">
-		<input id="search-input" type="text" name="url" placeholder="Paste song, album or playlist URL from Spotify">
+		<input id="search-input" type="text" name="url" placeholder="Paste song, album or playlist URL from YouTube/Youtube Music">
 		<input id="search-submit" type="submit" value="Start" onclick="return get_mp3()"><div id="loader"></div>
 	</div>	
 	<div id="info"></div>
