--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
 		<input id="search-submit" type="submit" value="Start" onclick="return get_mp3()"><div id="loader"></div>
 	</div>	
 	<div id="info"></div>
+	<p>You can download songs or music using this website for free. All YouTube or YouTube Music links are supported including Playlist links. Please don't use this site bigger files as it's API can't handle the request. Also YouTube shorts are not supported.</p>
+	<p>Use this site only for songs.</p><p></p>
+	<p>For bigger files use another site:- <a href="https://koshikkumar17.github.io/ytdl1">Click Here</a></p>
 </div>
 
 <footer class="copyright">
